--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Algoritma Çalışmaları</h1>
-    <script src="index.js"></script>
+    <!-- <script src="index.js"></script> -->
+    <script src="coderbyte.js"></script>
 </body>
 </html>
