--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Algoritma Çalışmaları</h1>
     <!-- <script src="index.js"></script> -->
-    <script src="coderbyte.js"></script>
+    <!-- <script src="coderbyte.js"></script> -->
+    <script src="coderbyte2.js"></script>
 </body>
 </html>
