--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Algoritma Çalışmaları</h1>
     <!-- <script src="index.js"></script> -->
     <!-- <script src="coderbyte.js"></script> -->
-    <script src="coderbyte2.js"></script>
+    <!-- <script src="coderbyte2.js"></script> -->
+    <script src="coderbyte3.js"></script>
 </body>
 </html>
