--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- <script src="index.js"></script> -->
     <!-- <script src="coderbyte.js"></script> -->
     <!-- <script src="coderbyte2.js"></script> -->
-    <script src="coderbyte3.js"></script>
+    <!-- <script src="coderbyte3.js"></script> -->
+    <script src="interview.js"></script>
 </body>
 </html>
